Convert Docs to junit5 #1058
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/1058